syntax = "proto3";

package tcdaemon;

import "google/protobuf/empty.proto";

service TcDaemon {
  rpc SetNetem(NetemRequest) returns (google.protobuf.Empty) {}
  rpc DeleteNetem(NetemRequest) returns (google.protobuf.Empty) {}
}

message NetemRequest {
  Netem netem = 1;
  string container_id = 2;
}

message Netem {
  uint32 time = 1;
  uint32 jitter = 2;
  float delay_corr = 3;
  uint32 limit = 4;
  float loss = 5;
  float loss_corr = 6;
  uint32 gap = 7;
  float duplicate = 8;
  float duplicate_corr = 9;
  float reorder = 10;
  float reorder_corr = 11;
  float corrupt = 12;
  float corrupt_corr = 13;
}
